fixed about page alignment

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -30,9 +30,16 @@ td {
     margin-left:auto; 
     margin-right:auto;
     margin-top: 20px;
-
 }
 
 #content {
     width: 70%;
+}
+
+.video {
+    margin: 0 auto;
+}
+
+iframe {
+    display:block;
 }
